...
    Scaffold(
        topBar = {
            TopAppBar(
                title = { Text("Promociones") },
                navigationIcon = {
                    IconButton(onClick = onNavigateBack) {
                        Icon(Icons.Filled.ArrowBack, contentDescription = "Volver")
                    }
                }
            )
        }
    ) {
        LazyColumn(
...
                Text(text = giveaway.description, style = MaterialTheme.typography.bodySmall)
                Spacer(modifier = Modifier.height(16.dp))
                Button(onClick = {
                    val intent = Intent(Intent.ACTION_VIEW, Uri.parse(giveaway.openGiveawayUrl))
                    context.startActivity(intent)
                }) {
                    Text("Ir a la oferta")
                }
            }
        }
    }
}

