...
        }
    ) { padding ->
        Column(modifier = Modifier.padding(padding)) {
            OutlinedTextField(
                value = searchText,
                onValueChange = productViewModel::onSearchTextChange,
                label = { Text("Buscar producto...") },
                modifier = Modifier.fillMaxWidth().padding(horizontal = 16.dp, vertical = 8.dp)
            )
            CategoryChips(
                selectedCategory = selectedCategory,
                onCategorySelected = { productViewModel.onCategoryChange(it) }
            )
...
